--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,7 +30,7 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Blood Bank Directory (National Health Portal)<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">View</a></p>
+            <p><a href="/bloodbanks">View</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Blood Bank Directory<i class="material-icons right">close</i></span>
