--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,123 +1,130 @@
-<nav class="white" role="navigation" style="height:115px;">
-  <div class="nav-wrapper container">
-    <a id="logo-container" href="#" class="brand-logo center"><%= image_tag 'logo.png', alt: 'KnowGovtData' %></a>
-  </div>
-</nav>
-
-<div id="index-banner" class="parallax-container">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <br><br>
-      <h1 class="header center teal-text text-lighten-2">Info For You</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">Knowledge is power. Information is liberating. Education is the premise of progress, in every society, in every family. -Kofi Annan</h5>
-      </div>
+<div class="container" id="main">
+  <div class="row">
+    <div class="col-md-4 col-sm-6">
     </div>
-  </div>
-  <div class="parallax"><%= image_tag "background1.jpg", alt: "Unsplashed background img 1" %></div>
-</div>
+    <div class="col-md-4 col-sm-6">
+        <nav class="white" role="navigation" style="height:115px;">
+          <div class="nav-wrapper container">
+            <a id="logo-container" href="#" class="brand-logo center"><%= image_tag 'logo.png', alt: 'KnowGovtData' %></a>
+          </div>
+        </nav>
 
-
-<div class="container">
-  <div class="section">
-
-    <!--   Icon Section   -->
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="/assets/blood.jpg">
+        <div id="index-banner" class="parallax-container">
+          <div class="section no-pad-bot">
+            <div class="container">
+              <br><br>
+              <h1 class="header center teal-text text-lighten-2">Info For You</h1>
+              <div class="row center">
+                <h5 class="header col s12 light">Knowledge is power. Information is liberating. Education is the premise of progress, in every society, in every family. -Kofi Annan</h5>
+              </div>
+            </div>
           </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Blood Bank Directory (National Health Portal)<i class="material-icons right">more_vert</i></span>
-            <p><a href="/bloodbanks">View</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Blood Bank Directory<i class="material-icons right">close</i></span>
-            <p>Data contains state/city wise list of blood banks and other required Information like address, geo location,
-              Contact Details, Area Pin Code, Email address, Website link, etc. The Ministry of Health and Family Welfare, Government of India has set up the National Health Portal in pursuance to the decisions of the National Knowledge Commission,
-              to provide healthcare related information to the citizens of India.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="/assets/train.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Indian Railways Train Time Table<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">View</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Indian Railways Train Time Table<i class="material-icons right">close</i></span>
-            <p>Get data of Indian railways Time Table. It contains train wise departure and arrival times at various stations. It also provides information of the route, distance covered , source station and destination station etc..</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="/assets/hospital.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Hospital Directory  (National Health Portal)<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">View</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Hospital Directory<i class="material-icons right">close</i></span>
-            <p>Data contains state wise list of Hospitals and other required Information like location, Category, Systems of Medicine, Contact Details, Area Pin Code, Email address, Website link, Specializations. The Ministry of Health and Family Welfare, Government of India has set up the National Health Portal in pursuance to the decisions of the National Knowledge Commission, to provide healthcare related information to the citizens of India.</p>
-          </div>
+          <div class="parallax"><%= image_tag "background1.jpg", alt: "Unsplashed background img 1" %></div>
         </div>
 
-      </div>
-    </div>
 
+            <!--   Icon Section   -->
+            <div class="row">
+              <div class="col s12 m4">
+                <div class="card">
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/assets/blood.jpg">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Blood Bank Directory (National Health Portal)<i class="material-icons right">more_vert</i></span>
+                    <p><a href="/bloodbanks">View</a></p>
+                  </div>
+                  <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Blood Bank Directory<i class="material-icons right">close</i></span>
+                    <p>Data contains state/city wise list of blood banks and other required Information like address, geo location,
+                      Contact Details, Area Pin Code, Email address, Website link, etc. The Ministry of Health and Family Welfare, Government of India has set up the National Health Portal in pursuance to the decisions of the National Knowledge Commission,
+                      to provide healthcare related information to the citizens of India.</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m4">
+                <div class="card">
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/assets/train.jpg">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Indian Railways </br> Train Time Table </br> <i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">View</a></p>
+                  </div>
+                  <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Indian Railways Train Time Table<i class="material-icons right">close</i></span>
+                    <p>Get data of Indian railways Time Table. It contains train wise departure and arrival times at various stations. It also provides information of the route, distance covered , source station and destination station etc..</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m4">
+                <div class="card">
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/assets/hospital.jpg">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Hospital Directory  (National Health Portal)<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">View</a></p>
+                  </div>
+                  <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Hospital Directory<i class="material-icons right">close</i></span>
+                    <p>Data contains state wise list of Hospitals and other required Information like location, Category, Systems of Medicine, Contact Details, Area Pin Code, Email address, Website link, Specializations. The Ministry of Health and Family Welfare, Government of India has set up the National Health Portal in pursuance to the decisions of the National Knowledge Commission, to provide healthcare related information to the citizens of India.</p>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+
+        <div class="parallax-container valign-wrapper">
+          <div class="section no-pad-bot">
+            <div class="container">
+              <div class="row center">
+                <h5 class="header col s12 light">If you’re a blood donor, you’re a hero to someone, somewhere, who received your gracious gift of life.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="parallax"><%= image_tag "background2.jpg", alt: "Unsplashed background img 2" %></div>
+        </div>
+
+        <div class="container">
+          <div class="section">
+
+            <div class="row">
+              <div class="col s12 center">
+                <h3><i class="mdi-content-send brown-text"></i></h3>
+                <h4>Information Technology</h4>
+                <p class="left-align light">This easy and quick access to information has been instrumental in improving our communication, travel, business, entertainment, space exploration, defence capabilities, medical surgeries etc. “We can visit sites situated thousands of miles away, chat with people sitting in other parts of the world, see the latest movies, watch live international matches, read daily newspapers, attend business conferences, conduct business transactions, visit world famous libraries, go through the latest books etc. all at the click of a key on the computer.</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+        <div class="parallax-container valign-wrapper">
+          <div class="section no-pad-bot">
+            <div class="container">
+              <div class="row center">
+                <h5 class="header col s12 light">To travel is to take a journey into yourself.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="parallax"><%= image_tag "background3.jpg", alt: "Unsplashed background img 3" %></div>
+        </div>
+
+        <footer class="page-footer teal">
+              Made by <a class="brown-text text-lighten-3" href="http://knowgovtdata.com">Know Govt Data</a>
+        </footer>
+    </div>
+    <div class="col-md-4 col-sm-6">
+    </div>
   </div>
 </div>
-
-
-<div class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-        <h5 class="header col s12 light">If you’re a blood donor, you’re a hero to someone, somewhere, who received your gracious gift of life.</h5>
-      </div>
-    </div>
-  </div>
-  <div class="parallax"><%= image_tag "background2.jpg", alt: "Unsplashed background img 2" %></div>
-</div>
-
-<div class="container">
-  <div class="section">
-
-    <div class="row">
-      <div class="col s12 center">
-        <h3><i class="mdi-content-send brown-text"></i></h3>
-        <h4>Information Technology</h4>
-        <p class="left-align light">This easy and quick access to information has been instrumental in improving our communication, travel, business, entertainment, space exploration, defence capabilities, medical surgeries etc. “We can visit sites situated thousands of miles away, chat with people sitting in other parts of the world, see the latest movies, watch live international matches, read daily newspapers, attend business conferences, conduct business transactions, visit world famous libraries, go through the latest books etc. all at the click of a key on the computer.</p>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-<div class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-        <h5 class="header col s12 light">To travel is to take a journey into yourself.</h5>
-      </div>
-    </div>
-  </div>
-  <div class="parallax"><%= image_tag "background3.jpg", alt: "Unsplashed background img 3" %></div>
-</div>
-
-<footer class="page-footer teal">
-    <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://knowgovtdata.com">Know Govt Data</a>
-    </div>
-</footer>
+<script type="text/javascript">
+    $('document').ready(function(){
+        $('.parallax').parallax();
+    });
+</script>
