--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
               <div class="col s12 m4">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="blood.jpg">
+                    <img class="activator" src="/assets/blood.jpg">
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Blood Bank Directory (National Health Portal)<i class="material-icons right">more_vert</i></span>
@@ -46,7 +46,7 @@
               <div class="col s12 m4">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="train.jpg">
+                    <img class="activator" src="/assets/train.jpg">
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Indian Railways </br> Train Time Table </br> <i class="material-icons right">more_vert</i></span>
@@ -62,7 +62,7 @@
               <div class="col s12 m4">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="hospital.jpg">
+                    <img class="activator" src="/assets/hospital.jpg">
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Hospital Directory  (National Health Portal)<i class="material-icons right">more_vert</i></span>
