--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container" id="main">
   <div class="row">
-    <div class="col-md-4 col-sm-6">
+    <div class="col-md-4">
     </div>
-    <div class="col-md-4 col-sm-6">
+    <div class="col-md-4">
         <nav class="white" role="navigation" style="height:115px;">
           <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo center"><%= image_tag 'logo.png', alt: 'KnowGovtData' %></a>
@@ -119,7 +119,7 @@
               Made by <a class="brown-text text-lighten-3" href="http://knowgovtdata.com">Know Govt Data</a>
         </footer>
     </div>
-    <div class="col-md-4 col-sm-6">
+    <div class="col-md-4">
     </div>
   </div>
 </div>
