Pincode directory added.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,15 +46,15 @@
               <div class="col s12 m4">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="/assets/train.jpg">
+                    <img class="activator" src="/assets/pincode.jpg">
                   </div>
                   <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Indian Railways </br> Train Time Table </br> <i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">View</a></p>
+                    <span class="card-title activator grey-text text-darken-4">All India Pincode Directory</br> <i class="material-icons right">more_vert</i></span>
+                    <p><a href="/pincodes">View</a></p>
                   </div>
                   <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Indian Railways Train Time Table<i class="material-icons right">close</i></span>
-                    <p>Get data of Indian railways Time Table. It contains train wise departure and arrival times at various stations. It also provides information of the route, distance covered , source station and destination station etc..</p>
+                    <span class="card-title grey-text text-darken-4">All India Pincode Directory<i class="material-icons right">close</i></span>
+                    <p>API of Postal Index Numbers (PIN) of India Post is a webservices providing access to metada of PIN code numbers of Post Offices in India. The API accepts HTTP GET/POST calls and returns JSON or XML formatted responses.</p>
                   </div>
                 </div>
               </div>
