--- a/app/views/home/bloodbanks.html.erb
+++ b/app/views/home/bloodbanks.html.erb
@@ -42,36 +42,8 @@
   <hr>
 </div><!--/main-->
 <script type="text/javascript">
-    var states = ["Andaman and Nicobar Islands","Andhra Pradesh","Arunachal Pradesh","Assam","Bihar","Chhattisgarh",
-        "Karnataka","Kerala","Lakshdweep","Madhya Pradesh","Maharashtra","Manipur","Meghalaya","Mizoram","Nagaland",
-        "Odisha","Puducherry","Punjab","Rajasthan","Sikkim","Tamil Nadu","Telangana","Tripura","Uttar Pradesh",
-        "Uttarakhand","West Bengal"];
-    var	districts = {"Andaman and Nicobar Islands":["Port Blair"],
-        "Andhra Pradesh":["Anantapur","Chittoor","Cuddapah","East Godavari","East Godavari district","Guntur","Kadapa","Krishna","Kurnool","Nellore","Prakasam","S.P.S.R Nellore","Srikakulam","Vijayawada","Villupuram","Visakhapatnam","Vizianagaram","West Godavari"],
-        "Arunachal Pradesh":["Bomdiala","Changlang","East Siang","Itanagar","Lower Subansiri","Naharlagun","Seppa","Tawang","Tezu","Upper Siang","Upper Subansiri","West Along"],
-        "Assam":["Barpeta","Bongaigaon","Cachar","Chapaguri","Darrang","Dhemaji","Dhubri","Dibrugarh","Dima-Hasao","Goalpara","Golaghat","Guwahati","Hailakandi","Jorhat","Kamrup","Kamrup (M)","Karbi Anglong","Karimganj","Keonjhar","Kokrajhar","Lakhimpur","Marghetia","Morigaon","Nagaon","Nalbari","Silchar","Sivasagar","Sivsagar","Sonitpur","Tezpur","Tinsukia"],
-        "Bihar":["Aurangabad","Begusarai","Bhagalpur","Bhojpur","Buxar","Chapra","Darbhanga","East Champaran","Gaya","Gopalganj","Hajipur","Jamui","Jehanabad","Kaimur","Katihar","Khagaria","Kishanganj","Laheriasarai","Lakhisarai","Madhepura","Madhubani","Munger","Muzaffarpur","Nalanda","Nawada","Patna","Rohtas","Saharsa","Samastipur","Sasaram","Sheikhpura","Sitamarhi","Siwan","Supaul","Umanagar"],
-        "Chhattisgarh":[],
-        "Karnataka":["Bagalkot","Bangalore","Bangalore Rural","Belgaum","Bellary","Bengaluru","Bijapur","Chamarajanagar","Chikkaballapur","Chitradurga","Dakshina Kannada","Davangere","Dharwad","Gadag","Gulbarga","Haveri","Hubli","Kalaburagi","Kodagu","Kolar","Koppal","Mandya","Mangalore","Mysore","North Kanara","Raichur","Shimoga","Sringeri","Tumkur","Udupi","Uttara Kannada"],
-        "Kerala":["Alappuzha","Allapuzha","Ernakulam","Idduki","Idukki","Kannur","Kasaragod","Kollam","Kottayam","Kozhikode","Malappuram","Palakkad","Pathanamthitta","Pathananthitta","Thiruvananthapuram","Thrissur","Wayanad"],
-        "Lakshdweep":["Kavaratti island"],
-        "Madhya Pradesh":["Alirajpur","Ashoknagar","Balaghat","Barwani","Betul","Bhind","Bhopal","Burhanpur","Chhatarpur","Chhindwara","Damoh","Datia","Dewas","Dhar","Dindori","Guna","Gwalior","Harda","Hoshangabad","Indore","Jabalpur","Jhabua","Katni","Khandwa","Khandwa(East Nimar)","Khargone (West Nimar)","Mandla","Mandsaur","Morena","Narsinghpur","Neemuch","Panna","Raisen","Rajgarh","Ratlam","Rewa","Sagar","Satna","Sehore","Seoni","Shahdol","Shajapur","Sheopur","Shivpuri","Sidhi","Singrauli","Suhagpur","Tikamgarh","Ujjain","Umaria","Vidisha"],
-        "Maharashtra":["Ahmednagar","Akola","Amravati","Aurangabad","Bandera","Beed","Buldhana","Chandrapur","Dhule","Gadchiroli","Gondia","Hingoli","Jalgaon","Jalna","Kolhapur","Latur","Mumbai","Nagpur","Nanded","Nandurbar","Nashik","Osmanabad","Parbhani","Pune","Raigad","Ratnagiri","Sangli","Satara","Sindhudurga","Solapur","Thane","Wardha","Washim","Yavatmal"],
-        "Manipur":["Churachandpur","Imphal","Imphal East","Imphal West","Thoubal"],
-        "Meghalaya":["East Khasi Hills","East Khasi Hills District","Shillong","West Garo Hills","West Jaintia Hills"],
-        "Mizoram":["Aizawl","Champhai","Kolasib","Lawngtlai","Lunglei","Mamit","Saiha","Serchhip"],
-        "Nagaland":["Dimapur","Kohima","Mokokchung","Phek","Tuensang","Wokha","Zunheboto"],
-        "Odisha":["Angul","Balasore","Baragarh","Bargarh","Bhadrak","Bhubaneswar","Bolangir","Boudh","Cuttack","Debagarh","Dhenkanal","Gajapati","Ganjam","Jagatsinghpur","Jajpur","Jharsuguda","Kalahandi","Kandhamal","Kendrapara","Kendujhar","Khurda","Koraput","Malkangiri","Mayurbhanj","Nawarangpur","Nayagarh","Nowrangpur","Nuapada","Puri","Rayagada","Sambalpur","Sonepur","Sundargarh","Sundergarh"],
-        "Puducherry":["Karaikal","Mahe","Yanam"],
-        "Punjab":["Amritsar","Bathinda","Bhatinda","Faridkot","Fatehgarh Sahib","Fazilka","Ferozpur","Gurdaspur","Hoshiarpur","Jalandhar","Kapurthala","Ludhiana","Mansa","Moga","Mohali","Muktsar","Nawanshahr","Pathankot","Patiala","Ropar","Sangrur","Tarn Taran"],
-        "Rajasthan":["Ajmer","Alwar","Banswara","Baran","Barmer","Bharatpur","Bhilwara","Bhilwari","Bikaner","Bundi","Chittaurgarh","Chittorgarh","Churu","Dausa","Dholpur","Dungarpur","Hanumangarh","Jaipur","Jaisalmer","Jalore","Jhalawar","Jhunjhunu","Jodhpur","Karauli","Kota","Mount Abu","Nagaur","Pali","Pilani","Pratapgarh","Rajsamand","Sawai Madhopur","Sawaimadhopur","Sikar","Sirohi","Sriganganagar","Tonk","Udaipur"],
-        "Sikkim":["East Sikkim","South Sikkim"],
-        "Tamil Nadu":["Ambur","Chennai","Coimbatore","Cuddalore","Dharmapuri","Dindigul","Erode","Gopichettipalayam","Kallakurichi","Kanchipuram","Kanyakumari","Karaikudi","Karur","Krishnagiri","Kumbakonam","Madurai","Nagapattinam","Namakkal","Nilgiris","Pattukottai","Perambalur","Pudukkottai","Pudukottai","Ramanathapuram","Salem","Sankarankovil","Sivaganga","Sivagangai","Thanajvur","Thanjavur","The Nilgiris","Theni","Thiruvallur","Thoothukudi","Tiruchirappalli","Tirunelveli","Tirupathur","Tiruppur","Tiruvallur","Tiruvannamalai","Tiruvarur","Vellore","Villupuram","Virudhunagar"],
-        "Telangana":["Adilabad","Hyderabad","Karimnagar","Khamam","Khammam","Mahaboobnagar","Medak","Nalgonda","Nizamabad","Ranga Reddy","Secunderabad","Tarnaka","Warangal"],
-        "Tripura":["Agartala","Dhalai","Dharmanagar","Gomti","Unakoti","West Tripura"],
-        "Uttar Pradesh":["Agra","Aligarh","Allahabad","Allahabad.","Ambedkar Nagar","Ambedkarnagar","Amroha","Auriya","Azamgarh","Badaun","Baghpat","Baharaich","Bahraich","Ballia","Balrampur","Banaras","Banda","Barabanki","Bareilly","Basti","Bijnor","Bulandshahar","Chandauli","Chitrakoot","Deoria","Etah","Etawah","Faizabad","Farrukhabad","Fatehpur","Ferozabad","Firozabad","Frukhabad","Gautam Budh Nagar","Gautam budh nagar","Gautambudh Nagar","Ghaziabad","Ghaziabad.","Ghazipur","Gonda","Gorakhpur","Hamirpur","Hapur","Hardoi","Jalaun","Jaunpur","Jhansi","Jyotiba Phule Nagar","Kannauj","Kanpur","Kanshi Ram Nagar","Kaushambi","Kushinagar","Lakhimpur Khiri","Lalitpur","Lucknow","Mahamaya Nagar","Maharajganj","Mahoba","Mainpuri","Mathura","Mau","Meerut","Mirzapur","Moradabad","Muzaffarnagar","Noida","Pilibhit","Pratapgarh","Raebareli","Rampur","Saharanpur","Sant Kabir Nagar","Sant Ravidas Nagar","Shahjahanpur","Shamli","Shrawasti","Sidharth Nagar","Sitapur","Sonbhadra","Sultanpur","Unnao","Varanasi"],
-        "Uttarakhand":["Almora","Chamoli","Dehradun","Haridwar","Kashipur","Kotdwar","Nainital","Pauri Garhwal","Pithoragarh","Roorkee","Udham Singh Nagar","Udhamsingh Nagar","Uttar Kashi"],
-        "West Bengal":["Bankura","Bardhaman","Birbhum","Burdwan","Cooch Behar","Cooch behar","Dakshin Dinajpur","Darjeeling","East Midnapore","Hooghly","Howrah","Jalpaiguri","KolKata","Kolkata","Malda","Medinipur","Midnapore","Murshidabad","Nadia","North 24 Parganas","Purulia","Siliguri","South 24 Parganas","Uttar Dinajpur","West Midnapore"]};
+    var states = <%= raw @state_names.to_json %>;
+    var	districts = <%= raw @district_names.to_json %>;
 
     $('#states').append($("<option></option>").attr("value",'All').text('All States'));
     $('#districts').append($("<option></option>").attr("value",'All').text('All Districts'));
@@ -98,11 +70,11 @@
 
     function getResult(state, district, offset){
         if(state != 'All' && district != 'All'){
-            var api_url = "https://data.gov.in/api/datastore/resource.json?resource_id=e16c75b6-7ee6-4ade-8e1f-2cd3043ff4c9&api-key=5f50a64949e68cf3fa3eadb5b1310d81&sort[h_name]=asc&filters[state]="+state+"&filters[district]="+district+"&offset="+offset;
+            var api_url = "https://api.data.gov.in/resource/fced6df9-a360-4e08-8ca0-f283fc74ce15?format=json&api-key=579b464db66ec23bdd000001915ff135a4c244e75f6371e952361b24&sort[_blood_bank_name]=asc&filters[_state]="+state+"&filters[_district]="+district+"&offset="+offset;
         }else if(state != 'All' && district == 'All'){
-            var api_url = "https://data.gov.in/api/datastore/resource.json?resource_id=e16c75b6-7ee6-4ade-8e1f-2cd3043ff4c9&api-key=5f50a64949e68cf3fa3eadb5b1310d81&sort[h_name]=asc&filters[state]="+state+"&offset="+offset;
+            var api_url = "https://api.data.gov.in/resource/fced6df9-a360-4e08-8ca0-f283fc74ce15?format=json&api-key=579b464db66ec23bdd000001915ff135a4c244e75f6371e952361b24&sort[_blood_bank_name]=asc&filters[_state]="+state+"&offset="+offset;
         }else{
-            var api_url = "https://data.gov.in/api/datastore/resource.json?resource_id=e16c75b6-7ee6-4ade-8e1f-2cd3043ff4c9&api-key=5f50a64949e68cf3fa3eadb5b1310d81&sort[h_name]=asc&offset="+offset;
+            var api_url = "https://api.data.gov.in/resource/fced6df9-a360-4e08-8ca0-f283fc74ce15?format=json&api-key=579b464db66ec23bdd000001915ff135a4c244e75f6371e952361b24&sort[_blood_bank_name]=asc&offset="+offset;
         }
         if(offset == 0){
             $("#blood-banks li").remove();
@@ -111,54 +83,81 @@
             var items = $();
             $.each( data['records'], function( key, val ) {
                 var	elements= "<i class='large material-icons circle red'>add_location</i>";
-                if(val['h_name'] != "NA"){
-                    elements += "<span class='title'>"+ val['h_name']+"</span><br>";
+                if(val['_blood_bank_name'] != "NA" && val['_blood_bank_name'] != ""){
+                    elements += "<span class='title'>"+ val['_blood_bank_name']+"</span><br>";
                 }
                 elements += "<p>";
-                if(val['blood_component'] != "NA"){
-                    elements += "Blood Component: "+ val['blood_component']+"<br>";
+                if(val['sr_no'] != "NA" && val['sr_no'] != ""){
+                    elements += "Serial Number: "+ val['sr_no']+"<br>";
                 }
-                if(val['service_time'] != "NA"){
-                    elements += "Service Time: "+ val['service_time']+"<br>";
+                if(val['_blood_component_available'] != "NA" && val['_blood_component_available'] != ""){
+                    elements += "Blood Component Available: "+ val['_blood_component_available']+"<br>";
                 }
-                if(val['blood_group'] != "NA"){
-                    elements += "Blood Group: "+ val['blood_group']+"<br>";
+                if(val['_service_time'] != "NA" && val['_service_time'] != ""){
+                    elements += "Service Time: "+ val['_service_time']+"<br>";
                 }
-                if(val['category'] != "NA"){
-                    elements += "Category: "+ val['category']+"<br>";
+                if(val['_category'] != "NA" && val['_category'] != ""){
+                    elements += "Category: "+ val['_category']+"<br>";
                 }
-                if(val['address'] != "NA"){
-                    elements += val['address']+"<br>";
+                if(val['_address'] != "NA" && val['_address'] != ""){
+                    elements += val['_address']+"<br>";
                 }
-                if(val['city'] != "NA"){
-                    elements += val['city']+"<br>";
+                if(val['_city'] != "NA" && val['_city'] != ""){
+                    elements += val['_city']+"<br>";
                 }
-                if(val['district'] != "NA"){
-                    elements += val['district']+"<br>";
+                if(val['_district'] != "NA" && val['_district'] != ""){
+                    elements += val['_district']+"<br>";
                 }
-                if(val['state'] != "NA"){
-                    elements += val['state']+"<br>";
+                if(val['_state'] != "NA" && val['_state'] != ""){
+                    elements += val['_state']+"<br>";
                 }
-                if(val['pincode'] != "NA"){
+                if(val['pincode'] != "NA" && val['pincode'] != ""){
                     elements += val['pincode']+"<br>";
                 }
-                if(val['contact'] != "NA"){
-                    elements += "<i class='material-icons prefix'>phone</i>: "+val['contact']+"<br>";
+                if(val['_contact_no'] != "NA" && val['_contact_no'] != ""){
+                    elements += "<i class='material-icons prefix'>phone</i>: "+val['_contact_no']+"<br>";
                 }
-                if(val['fax'] != "NA"){
-                    elements += "Fax: "+val['fax']+"<br>";
+                if(val['_fax'] != "NA" && val['_fax'] != ""){
+                    elements += "Fax: "+val['_fax']+"<br>";
                 }
-                if(val['email'] != "NA"){
-                    elements += "<i class='material-icons'>email</i>: "+val['email']+"<br>";
+                if(val['_email'] != "NA" && val['_email'] != ""){
+                    elements += "<i class='material-icons'>email</i>: "+val['_email']+"<br>";
                 }
-                if(val['helpline'] != "NA"){
-                    elements += "Helpline: "+val['helpline']+"<br>";
+                if(val['_helpline'] != "NA" && val['_helpline'] != ""){
+                    elements += "Helpline: "+val['_helpline']+"<br>";
                 }
-                if(val['website'] != "NA"){
-                    elements += "<i class='material-icons'>language</i>: "+val['website']+"<br>";
+                if(val['_website'] != "NA" && val['_website'] != ""){
+                    elements += "<i class='material-icons'>language</i>: "+val['_website']+"<br>";
                 }
-                if(val['latitude'] != "NA" && val['longitude'] != "NA"){
-                    elements += "<i class='material-icons'>place</i>: <a href='https://www.google.com/maps/@"+val['latitude']+","+val['longitude']+",16z'>Map Location</a><br>";
+                if(val['_nodal_officer_'] != "NA" && val['_nodal_officer_'] != ""){
+                    elements += "Nodal Officer: "+val['_nodal_officer_']+"<br>";
+                }
+                if(val['_contact_nodal_officer'] != "NA" && val['_contact_nodal_officer'] != ""){
+                    elements += "Contact Nodal Officer: "+val['_contact_nodal_officer']+"<br>";
+                }
+                if(val['_mobile_nodal_officer'] != "NA" && val['_mobile_nodal_officer'] != ""){
+                    elements += "Mobile Nodal Officer: "+val['_mobile_nodal_officer']+"<br>";
+                }
+                if(val['_email_nodal_officer'] != "NA" && val['_email_nodal_officer'] != ""){
+                    elements += "Email Nodal Officer: "+val['_email_nodal_officer']+"<br>";
+                }
+                if(val['_qualification_nodal_officer'] != "NA" && val['_qualification_nodal_officer'] != ""){
+                    elements += "Qualification Nodal Officer: "+val['_qualification_nodal_officer']+"<br>";
+                }
+                if(val['_apheresis'] != "NA" && val['_apheresis'] != ""){
+                    elements += "Apheresis: "+val['_apheresis']+"<br>";
+                }
+                if(val['_license_'] != "NA" && val['_license_'] != ""){
+                    elements += "License: "+val['_license_']+"<br>";
+                }
+                if(val['_date_license_obtained'] != "NA" && val['_date_license_obtained'] != ""){
+                    elements += "Date License Obtained: "+val['_date_license_obtained']+"<br>";
+                }
+                if(val['_date_of_renewal'] != "NA" && val['_date_of_renewal'] != ""){
+                    elements += "Date of Renewal: "+val['_date_of_renewal']+"<br>";
+                }
+                if(val['_latitude'] != "NA" && val['_latitude'] != "" && val['_longitude'] != "NA" && val['_longitude'] != ""){
+                    elements += "<i class='material-icons'>place</i>: <a target='_blank' href='https://www.google.com/maps/@"+val['_latitude']+","+val['_longitude']+",20z'>Map Location</a><br>";
                 }
                 elements += "</p>";
                 items = items.add( "<li class='collection-item avatar' id='" + key + "'>" + elements + "</li>" );
